<!--
 This file is part of windvolt.org.

 Copyright (c) 2020 Max Sumer

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <!-- windvolt -->
    <string name="app_name">windvolt</string>

    <!-- about -->
    <string name="about_action">About</string>
    <string name="about_hello">About</string>

    <string name="about_message">windvolt targets the usage and pricing of renewable ernergy</string>


    <!-- welcome page -->
    <string name="welcome_label">Overview</string>
    <string name="welcome_hello">Erneuerbare Energie Deutschland</string>

    <!-- page0 'wind' -->
    <string name="page0_label">story</string>
    <string name="page0_hello">windvolt story</string>
    <string name="page0_open">windvolt</string>
    <string name="page0_exit">back</string>

    <!-- page1 'solar' -->
    <string name="page1_label">players</string>
    <string name="page1_hello">Who is Who</string>
    <string name="page1_open">whoiswho</string>
    <string name="page1_exit">back</string>

    <!-- page2 'geothermal' -->
    <string name="page2_label">Markt</string>
    <string name="page2_hello">Geschäftsmodell</string>
    <string name="page2_open">economics</string>
    <string name="page2_exit">back</string>

    <!-- page3 'neutronal' -->
    <string name="page3_label">community</string>
    <string name="page3_hello">Informationen im www</string>
    <string name="page3_open">links</string>
    <string name="page3_exit">back</string>


    <!-- devices -->
    <string name="open_devices">manage devices</string>
    <string name="action_devices">Devices</string>


    <!-- preferences -->

    <string name="category_location">location</string>
    <string name="category_devices">devices</string>

    <string name="location_title">location</string>
    <string name="location_summary">your location</string>
    <string name="updates_title">updates</string>
    <string name="updates_summary">allow us to collect your devices data to calculate loading recommendation</string>
    <string name="notifications_title">recieve notifications</string>
    <string name="notifications_summary">allow us to notify you when loading is recommended</string>

    <string name="disclaimer">we do not collect any data at this time</string>


    <string name="settings_action">Settings</string>
    <string name="settings_hello">edit preferences</string>

    <string name="story_action">Story</string>


</resources>